# ktransformers

./: .clang-format  .gitignore  .gitmodules  .tmp_arxiv_mcp_probe.js  0.sh  1.py  404.html  CMakeLists.txt  Dockerfile  MAINTAINERS.md  MANIFEST.in  MESH_BENCHMARK_GUIDE.md  Makefile  NOTICE  README.md  README_ZH.md  TROUBLESHOOTING_LOG.md  align_safetensors.py  bench_decode_stream.py  cap_sweep.sh  cap_sweep_bf16.sh  cap_sweep_raid0.py  cmake_install.cmake  fix_safetensors_align.py  flake.nix  index.html  install-with-cache.sh  install.bat  install.sh  install.txt  install_dcu.sh  install_for_npu.sh  ktransformers.py  print.html  pyproject.toml  requirements-local_chat.txt  run_mesh_35b_bf16_cap_tp2.sh  run_mesh_397b_cap_tp2.sh  searcher-09f2665d.js  searcher-c2a407aa.js  (+57 more)
archive/kt-sft/: Dockerfile  MANIFEST.in  Makefile  autosetup.sh  install-with-cache.sh  pyproject.toml  requirements-sft.txt  setup.py  withoutKT_PEFT.py
archive/kt-sft/ktransformers/: __init__.py  moe_test_module_old.py
csrc/balance_serve/: CMakeLists.txt
csrc/balance_serve/kvc2/: CMakeLists.txt  unit_test.sh
csrc/balance_serve/sched/: CMakeLists.txt  bind.cpp  metrics.cpp  metrics.h  model_config.h  scheduler.cpp  scheduler.h
csrc/ktransformers_ext/: CMakeLists.txt  ext_bindings.cpp
csrc/ktransformers_ext/bench/: bench_moe.py  bench_moe_amx.py  multi_bench_moe.py
csrc/ktransformers_ext/cpu_backend/: cpuinfer.h  shared_mem_buffer.cpp  shared_mem_buffer.h  task_queue.cpp  task_queue.h  worker_pool.cpp  worker_pool.h
csrc/ktransformers_ext/cuda/: test_dequant.py
csrc/ktransformers_ext/examples/: test_moe_amx.py
csrc/ktransformers_ext/operators/: moe-tp.hpp
kt-cli/: README.md  pyproject.toml
kt-cli/ktcli/: i18n.py  main.py
kt-cli/ktcli/commands/: bench.py  config.py  doctor.py  download.py  install.py  quant.py  run.py  sft.py  version.py
kt-cli/ktcli/config/: __init__.py
kt-cli/ktcli/requirements/: inference.txt
kt-cli/ktcli/utils/: console.py  environment.py  model_registry.py
kt-cli/tests/: __init__.py
kt-kernel/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  MANIFEST.in  README.md  README_zh.md  autosetup.sh  ext_bindings.cpp  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_global_search.py  test_uuid_registry.py  test_uuid_simple.py
kt-kernel/.githooks/: commit-msg  pre-commit
kt-kernel/bench/: .gitignore  BENCH_MOE_REPORT_20260302.md  Makefile  bench_attention.py  bench_attention_torch.py  bench_backward_amx_vs_torch.py  bench_backward_correctness.py  bench_bf16_moe.py  bench_fp4_moe.py  bench_fp8_moe.py  bench_fp8_perchannel_moe.py  bench_fp8_write_buffer.py  bench_k2_moe_amx.py  bench_k2_write_buffer.py  bench_linear.py  bench_mla.py  bench_mlp.py  bench_moe.py  bench_moe_amx.py  bench_moe_amx_k.py  bench_moe_fp8.py  bench_moe_kernel.py  bench_moe_kernel_tiling.py  bench_moe_kml.py  bench_moe_nvfp4.py  bench_moe_torch.py  bench_optimizer_step.py  bench_prepack_vs_torch_gemm.py  bench_repack_breakdown.py  bench_write_buffer.py  compare_moe_performance.py  multi_bench_moe.py  upload-bench-json.py
kt-kernel/cmake/: DetectCPU.cmake
kt-kernel/cpu_backend/: async_io.cpp  async_io.hpp  cpuinfer.h  shared_mem_buffer.cpp  shared_mem_buffer.h  task_queue.cpp  task_queue.h  worker_pool.cpp  worker_pool.h
kt-kernel/cpu_backend/vendors/: cuda.h  hip.h  maca.h  musa.h  vendor.h
kt-kernel/cuda/: binding.cpp  setup.py  test_dequant.py
kt-kernel/cuda/custom_gguf/: dequant.cu  ops.h
kt-kernel/cuda/gptq_marlin/: ops.h
kt-kernel/cuda/moe/: moe_topk_softmax_kernels.cu  ops.h  utils.h
kt-kernel/demo/: .gitignore  Makefile  bench_reorder_bandwidth.cpp  bf16-test.cpp  fp16-test.cpp  plot.py  simple_test.cpp  simple_test_aocl.cpp  tflops.py
kt-kernel/docs/: moe_sft_amx.md
kt-kernel/docs/SFT+KTWrapper/: 01_架构分析.md  02_功能需求.md  03_功能架构设计.md  04_功能具体实现.md  05_算子接口.md  06_测试使用.md
kt-kernel/docs/sft_moe_amx/: bug调试记录.md  功能使用测试文档.md  功能最终实现文档.md  功能详细设计文档.md  功能需求文档.md  算子接口文档.md
kt-kernel/examples/: bench_moe_amx_int8.py  compare_tp_dumps.py  debug_expert_17_24.py  modeling_deepseek_v3.py  repro_llamafile_re.py  test-debug.py  test_apply_rope.py  test_attention.py  test_awq_moe_amx.py  test_bf16_moe.py  test_deepseekv3.py  test_deepseekv3_prefill.py  test_deepseekv3_prefill_speed.py  test_fp4_moe_amx.py  test_fp4_moe_avx2.py  test_fp4_moe_v4.py  test_fp8_moe.py  test_fp8_perchannel_moe.py  test_fp8_write_buffer.py  test_gate.py  test_k2_moe_amx.py  test_k2_write_buffer.py  test_linear.py  test_lora_b_zero_issue.py  test_mla.py  test_mla_qlen.py  test_mla_quant.py  test_mla_simple.py  test_mla_torch.py  test_mlp.py  test_moe.py  test_moe_amx.py  test_moe_amx_perf.py  test_moe_kernel.py  test_moe_kml.py  test_moe_nvfp4.py  test_moe_sft_amx.py  test_moe_sft_amx_no_tp.py  test_moe_sft_tp_debug.py  test_moe_sft_wrapper.py  (+11 more)
kt-kernel/operators/: common.hpp  mla-tp.hpp  moe-sft-tp.hpp  moe-tp.hpp  reduce.hpp  rms-norm.hpp  rope.hpp  softmax.hpp
kt-kernel/operators/amx/: NVFP4_README.md  awq-moe.hpp  bf16-moe.hpp  fp4-moe.hpp  fp8-moe.hpp  fp8-perchannel-moe.hpp  k2-moe.hpp  moe.hpp  moe_base.hpp  mxfp8-moe.hpp  nvfp4-moe.hpp  polling_memcpy_worker.cpp  sft_moe.hpp  (+3 more)
kt-kernel/plan/: nvfp4.md
kt-kernel/python/: __init__.py  _cpu_detect.py  expert_placement.py  experts.py  experts_base.py  experts_sft.py
kt-kernel/scripts/: README.md  align_safetensors_for_direct_io.py  bench_long_gibberish_mesh.py  check.py  check_cpu_features.py  compare_residency_policies.py  compare_weights.py  convert_cpu_weights.py  convert_cpu_weights_ds4.py  convert_gpu_weights.py  convert_kimi_k2_fp8_to_bf16_cpu.py  convert_kt_to_sglang_adapter.py  convert_moe_to_bf16.py  convert_weights.py  install-git-hooks.sh  merge_cpu_weights.py  repair_quant_shard.py
kt-kernel/test/: __init__.py  pytorch_memory_diagram.py  pytorch_tensor_assignment_demo.py  run_suite.py  test_generate_gpu_experts_masks.py  test_native_moe_loader_auto_release.py  test_tensor_sharing.py
ktransformers/ktransformers_ext/: CMakeLists.txt  CMakeSettings.json  ext_bindings.cpp
(+1287 files in other folders)
